base/ollama-both/llama318b-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    # haproxy.router.openshift.io/server-timeout: 300s
  labels:
    app: ollama-both
  name: ollama-both
  namespace: sasya-arogya
spec:
  # host: engine-sasya-arogya.apps.cluster-mx6z7.mx6z7.sandbox5315.opentlc.com
  port:
    targetPort: 11434-tcp
  # tls:
  #   insecureEdgeTerminationPolicy: Redirect
  #   termination: edge
  to:
    kind: Service
    name: ollama-both
    weight: 100
  wildcardPolicy: None
